--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12023,6 +12023,7 @@ footer button {
 
 .pen {
   position: absolute;
-  bottom: 208px;
+  bottom: 268px;
   left: 23px;
+  font-size: 0.5rem;
 }/*# sourceMappingURL=style.css.map */
