--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12023,7 +12023,13 @@ footer button {
 
 .pen {
   position: absolute;
-  bottom: 268px;
-  left: 23px;
+  bottom: 326px;
+  left: 17px;
   font-size: 0.5rem;
+  width: 40px;
+  height: 40px;
+}
+
+.fs-7 {
+  font-size: 15px !important;
 }/*# sourceMappingURL=style.css.map */
