--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,7 +57,12 @@ footer {
 
 .pen {
   position: absolute;
-  bottom: 268px;
-  left: 23px;
+  bottom: 326px;
+  left: 17px;
   font-size: 0.5rem;
+  width: 40px;
+  height: 40px;
+}
+.fs-7 {
+  font-size: 15px !important;
 }
