--- a/scss/style.scss
+++ b/scss/style.scss
@@ -96,3 +96,56 @@ main {
 .slick-prev:before {
   content: "<";
 }
+.signIn-main {
+  height: 1010px;
+  background-color: rgb(40, 39, 44);
+  background-image: url("/assets/netflix-bg.jpg");
+  background-size: cover;
+  background-position: top;
+  .signIn {
+    width: 450px;
+    #passwordBox {
+      position: relative;
+      #eyes {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        .bi-eye {
+          position: absolute;
+        }
+      }
+    }
+  }
+}
+.dinHeight {
+  height: 1102px;
+}
+
+.form-control:focus {
+  color: var(--bs-body-color);
+  background-color: var(--bs-body-bg);
+  border-color: #fcfbfb !important;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(253, 253, 253, 0.493);
+}
+
+.shake {
+  animation: shake 200ms infinite;
+}
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(5px);
+  }
+  50% {
+    transform: translateX(-5px);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
